--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
         
         <div style="margin-top: 30px; padding-top: 20px; border-top: 1px solid #e2e8f0;">
             <p style="font-size: 12px; color: #a0aec0;">
-                💡 <strong>Default Admin PIN:</strong> 1234
+                 <strong> plz Dont Share password</strong>
             </p>
         </div>
     </div>
@@ -2196,4 +2196,5 @@
         };
     </script>
 </body>
+
 </html>
