--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         * {
             margin: 0;
-            padding: 0;
+            padding: 0;f
             box-sizing: border-box;
             -webkit-tap-highlight-color: transparent;
         }
@@ -681,7 +681,7 @@
         <p style="color: #718096; margin-bottom: 30px;">Select your role to continue</p>
         
         <button class="login-btn login-admin" onclick="showAdminLogin()">
-            👨‍💼 Admin Login
+            👨‍💼 Training manager
         </button>
         
         <div id="adminPinSection" style="display: none;">
@@ -2198,3 +2198,4 @@
 </body>
 
 </html>
+
